# haal-installer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  release.yml  security-audit.yml
.kiro/specs/registry-competency-redesign/: .config.kiro  design.md  requirements.md  tasks.md
docs/: README.md  architecture.md  artifact-types.md  install-paths.md  multi-registry.md  presentation-plan.md  registry-structure.md  rules-and-commands.md  vision.md
scripts/: build.sh  create-icon.cjs
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checksum_validator.rs  competency_expander.rs  competency_loader.rs  config_manager.rs  conflict_detector.rs  content_hasher.rs  destination_resolver.rs  errors.rs  github_auth.rs  installer.rs  lib.rs  logging.rs  main.rs  manifest_parser.rs  models.rs  offline_detector.rs  operation_engine.rs  registry_manager.rs  repo_manager.rs  requirement_checker.rs  rollback_manager.rs  self_installer.rs  system_installer.rs  tool_detector.rs  traits.rs  version_tracker.rs
src-tauri/src/adapters/: claude_code.rs  copilot.rs  cursor.rs  kiro.rs  mod.rs  windsurf.rs
src/lib/: greet.test.ts  greet.ts
src/lib/components/: ChooseStep.svelte  ConnectStep.svelte  DoneStep.svelte  ExecuteStep.svelte  Header.svelte  Sidebar.svelte  (+7 more)
(+11 files in other folders)
